--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate-audio": "tsx --env-file=.env.development scripts/generate-audio.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -18,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
+    "microsoft-cognitiveservices-speech-sdk": "^1.43.1",
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
@@ -25,6 +27,7 @@
     "react-hook-form": "^7.56.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tsx": "^4.19.4",
     "zod": "^3.24.3"
   },
   "devDependencies": {
